--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -14,11 +14,10 @@ data:
       metricsBindAddr: "127.0.0.1:8080"
       leaderElection: true
       metricsSink: {{ .Values.controller.metricsSink | quote }}
+      profilerSink: {{ .Values.controller.profilerSink | quote }}
       tracer:
         sink: {{ .Values.controller.tracer.sink | quote }}
         sampleRate: {{ .Values.controller.tracer.sampleRate }}
-      profiler:
-        sink: {{ .Values.controller.profiler.sink | quote }}
       enableSafeguards: {{ .Values.controller.enableSafeguards }}
       enableObserver: {{ .Values.controller.enableObserver }}
       notifiers:
