--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -16,11 +16,10 @@ controller:
   enableSafeguards: true # enable safeguards on targets selection (do not target the node running the controller)
   enableObserver: true # enable observer on targets, notifying of target warning status and events
   metricsSink: noop # metrics driver (noop or datadog)
+  profilerSink: noop # profiler driver (noop or datadog)
   tracer:
     sink: noop # tracer driver (noop or datadog)
     sampleRate: 1.0 # tracer sampling rate
-  profiler:
-    sink: noop # profiler driver (noop or datadog)
   notifiers:
     common:
       clusterName: lima
