feat: add auth to build:make job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ ci-image:
 
 # main make build
 build:make:
-  <<: *docker-runner
+  <<: *docker-hub-login
   stage: build
   when: always
   variables:
