fix: debug golangci-lint version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,9 +101,7 @@ jobs:
             source ${ENVTEST_ASSETS_DIR}/setup-envtest.sh; fetch_envtest_tools ${ENVTEST_ASSETS_DIR}; setup_envtest_env ${ENVTEST_ASSETS_DIR};
       - run:
           name: Install golangci-lint tool
-          command: |
-            cd /usr/local
-            curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v${GOLANGCI_LINT_VERSION}
+          command: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v${GOLANGCI_LINT_VERSION}
       - run:
           name: Install helm
           command: |
