--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,8 +102,7 @@ jobs:
       - run:
           name: Install golangci-lint tool
           command: |
-            cd /usr/local
-            curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v${GOLANGCI_LINT_VERSION}
+            go install github.com/golangci/golangci-lint/cmd/golangci-lint@v${GOLANGCI_LINT_VERSION}
       - run:
           name: Install helm
           command: |
