--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,12 +4,16 @@
 # Copyright 2023 Datadog, Inc.
 
 run:
+  timeout: 5m
   skip-files:
     - api/v1beta1/zz_generated.deepcopy.go
     - ".*_test.go"
     - cpuset/*
 linters:
+  # disable all linters by default
+  disable-all: true
   enable:
+    # default linters
     - errcheck
     - gosimple
     - govet
@@ -17,6 +21,7 @@ linters:
     - staticcheck
     - typecheck
     - unused
+    # extra linters
     - bodyclose
     - depguard
     - dogsled
@@ -48,10 +53,16 @@ issues:
     - weak random number generator
     - memory aliasing in for loop
     - file inclusion via variable
-    # stylecheck
-    - at least one file in a package should have a package comment
     # golint
     - (comment on exported (method|function|type|const)|should have( a package)? comment|comment should be of the form)
-    # revive
-    - and that stutters
-    - unexported-return
+
+  exclude-rules:
+    - linters:
+        - revive
+      text: "unused-parameter:|and that stutters;|unexported-return:"
+    - linters:
+        - stylecheck
+      text: at least one file in a package should have a package comment
+
+output:
+  sort-results: true
