--- a/chart/values/local.yaml
+++ b/chart/values/local.yaml
@@ -2,10 +2,14 @@
 # under the Apache License Version 2.0.
 # This product includes software developed at Datadog (https://www.datadoghq.com/).
 # Copyright 2023 Datadog, Inc.
+
+# this file can be used to debug chaos-controller locally
+# more details: https://github.com/DataDog/chaos-controller/blob/main/docs/development.md#debugging-the-controller-locally
+
 controller:
-  metricsBindAddr: "127.0.0.1:8080"
+  metricsBindAddr: 127.0.0.1:8080
   leaderElection: false
-  metricsSink: "noop"
+  metricsSink: noop
   enableSafeguards: false
   notifiers:
     common:
@@ -14,28 +18,36 @@ controller:
       enabled: true
     slack:
       enabled: false
-      tokenFilepath: ""
     http:
       enabled: false
-      url: ""
-      headersFilepath: ""
-      headers: []
+  cloudProviders:
+    disableAll: false
+    pullInterval: 24h
+    aws:
+      enabled: true
+      ipRangesURL: https://ip-ranges.amazonaws.com/ip-ranges.json
+    gcp:
+      enabled: true
+      ipRangesURL: https://www.gstatic.com/ipranges/goog.json
+    datadog:
+      enabled: true
+      ipRangesURL: https://ip-ranges.datadoghq.com/
   deleteOnly: false
   imagePullSecrets: ""
   defaultDuration: 1h
   expiredDisruptionGCDelay: 10m
   webhook:
-    certDir: "local/certDir"
+    certDir: chart/certs
     host: ""
     port: 9443
 injector:
   image: k8s.io/chaos-injector:latest
-  serviceAccount: "chaos-injector"
-  chaosNamespace: "chaos-engineering"
+  serviceAccount: chaos-injector
+  chaosNamespace: chaos-engineering
   dnsDisruption:
     dnsServer: ""
-    kubeDns: "all"
+    kubeDns: all
 handler:
   enabled: true
   image: k8s.io/chaos-handler:latest
-  timeout: "1m"
+  timeout: 1m
