--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -16,11 +16,11 @@ controller:
   enableSafeguards: true # enable safeguards on targets selection (do not target the node running the controller)
   enableObserver: true # enable observer on targets, notifying of target warning status and events
   metrics:
-    sinkDriver: noop
+    sink: noop
   profiler:
-    sinkDriver: noop
+    sink: noop
   tracer:
-    sinkDriver: noop
+    sink: noop
     sampleRate: 1.0
   notifiers:
     common:
