Network disruption on services with a list of affected ports (#679)
* network disruption on services with optional list of allowed ports

* unit test

* unit test + chaosli

* fix lint

* fix crd

* update tests + update allowed ports on change

* fix tests

* Update cli/chaosli/cmd/create.go

Co-authored-by: Matthieu Bono <luphaz@users.noreply.github.com>

* add name and protocol to service port

* whoops, removing chaosli

* lint

* increase eventually increase of timeout

* increase eventually increase of timeout

* update unit tests

* adding one unit test on service watcher logic

* adding more time to timeout unit test

* update per PR comments

* fix lint

* increase timeout limit on unit test

* update log message

* update chaosli

* update err msg

* update err msg

* update timeout on eventually

* Update cli/chaosli/cmd/create.go

Co-authored-by: Matthieu Bono <luphaz@users.noreply.github.com>

* update on pr comments

* verify map member

* Apply suggestions from code review

Co-authored-by: Philip Thompson <philip.thompson@datadoghq.com>

* fix link of doc file

* fix unit tests

---------

Co-authored-by: Matthieu Bono <luphaz@users.noreply.github.com>
Co-authored-by: Philip Thompson <philip.thompson@datadoghq.com>

--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -407,6 +407,17 @@ spec:
                           type: string
                         namespace:
                           type: string
+                        ports:
+                          items:
+                            properties:
+                              name:
+                                type: string
+                              port:
+                                maximum: 65535
+                                minimum: 0
+                                type: integer
+                            type: object
+                          type: array
                       required:
                       - name
                       - namespace
