feat: add 'level: node' field to node Failure examples

--- a/examples/node_failure.yaml
+++ b/examples/node_failure.yaml
@@ -11,6 +11,7 @@ metadata:
   annotations:
     chaos.datadoghq.com/environment: "lima"
 spec:
+  level: node # impact the whole node instead of a single pod
   selector:
     app: demo-curl
   count: 1
