--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -489,6 +489,8 @@ spec:
                 type: object
               staticTargeting:
                 type: boolean
+              synchronizedDelay:
+                type: string
               unsafeMode:
                 description: UnsafemodeSpec represents a spec with parameters to turn
                   off specific safety nets designed to catch common traps or issues
