--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -451,9 +451,9 @@ spec:
                 type: object
               reporting:
                 description: Reporting provides additional reporting options in order
-                  to send a message to a custom slack channel it expect the main controller
-                  to have slack notifier enabled it expect slack bot to be added to
-                  the defined slack channel
+                  to send a message to a custom slack channel it expects the main
+                  controller to have the slack notifier enabled it expects a slack
+                  bot to be added to the defined slack channel
                 nullable: true
                 properties:
                   minNotificationType:
@@ -489,8 +489,20 @@ spec:
                 type: object
               staticTargeting:
                 type: boolean
-              synchronizedDelay:
-                type: string
+              trigger:
+                description: DisruptionTrigger holds the options for changing when
+                  injector pods are created, and the timing of when the injection
+                  occurs
+                properties:
+                  noPodsBefore:
+                    format: date-time
+                    type: string
+                  notInjectedBefore:
+                    format: date-time
+                    type: string
+                  offset:
+                    type: string
+                type: object
               unsafeMode:
                 description: UnsafemodeSpec represents a spec with parameters to turn
                   off specific safety nets designed to catch common traps or issues
