Check for spec.trigger.pods

--- a/examples/trigger.yaml
+++ b/examples/trigger.yaml
@@ -22,6 +22,6 @@ spec:
       offset: 2m
     pods:
       # notBefore: 2023-05-09T11:10:08-04:00 # RFC3339 format
-      offset: 1m # TODO ignored
+      offset: 1m
   containerFailure:
     forced: true
