--- a/examples/trigger.yaml
+++ b/examples/trigger.yaml
@@ -16,12 +16,13 @@ spec:
     app: demo-curl
   count: 100%
   staticTargeting: true
-  trigger:
+  duration: 30m
+  triggers:
     inject:
       # notBefore: 2023-05-09T11:10:08-04:00 # RFC3339 format
       offset: 2m
     pods:
-      # notBefore: 2023-05-09T11:10:08-04:00 # RFC3339 format
+#      notBefore: 2023-05-09T15:15:08-04:00 # RFC3339 format
       offset: 1m
-  containerFailure:
-    forced: true
+  network:
+    drop: 1
