--- a/chart/templates/webhook.yaml
+++ b/chart/templates/webhook.yaml
@@ -2,6 +2,7 @@
 # under the Apache License Version 2.0.
 # This product includes software developed at Datadog (https://www.datadoghq.com/).
 # Copyright 2023 Datadog, Inc.
+{{- if .Values.controller.enabled }}
 {{- $ca := genCA "chaos-controller-webhook-service-ca" 3650 }}
 {{- $cn := "chaos-controller-webhook-service" }}
 {{- $altName1 := printf "chaos-controller-webhook-service.%s.svc" .Values.chaosNamespace }}
@@ -187,4 +188,5 @@ metadata:
 data:
   tls.crt: {{ b64enc $cert.Cert }}
   tls.key: {{ b64enc $cert.Key }}
+{{- end }}
 {{- end }}
