--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -12,6 +12,7 @@ images: # images and tag to pull for each component of the stack
   pullSecrets: false # name of the secret object to use when pulling images
 
 controller:
+  enabled: true # should the controller and associated webhooks be deployed or not
   deleteOnly: false # enable delete-only mode
   enableSafeguards: true # enable safeguards on targets selection (do not target the node running the controller)
   enableObserver: true # enable observer on targets, notifying of target warning status and events
@@ -68,10 +69,12 @@ injector:
   serviceAccount: chaos-injector # service account to use for the chaos injector pods
   dnsDisruption: # dns disruption configuration
     dnsServer: "" # IP address of the upstream dns server
-    kubeDns: "all" # whether to use kube-dns for DNS resolution (default: "all"). Options:
-         # : "off": use the DNS server defined in the controller configuration for all resolutions
-         # : "internal": use kube-dns for internal hostnames resolution (`.local.` or `.internal.` suffixes), use the DNS server defined in the controller configuration for all other resolutions
-         # : "all": use kube-dns for all resolutions
+    kubeDns:
+      all
+      # whether to use kube-dns for DNS resolution (default: "all"). Options:
+      # : "off": use the DNS server defined in the controller configuration for all resolutions
+      # : "internal": use kube-dns for internal hostnames resolution (`.local.` or `.internal.` suffixes), use the DNS server defined in the controller configuration for all other resolutions
+      # : "all": use kube-dns for all resolutions
   networkDisruption: # network disruption general configuration
     allowedHosts: [] # list of always allowed hosts (even if explicitly blocked by a network disruption)
     # (here's the expected format, all fields are optional)
