--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,11 +5,9 @@
 
 run:
   timeout: 5m
+  tests: false
   skip-files:
     - api/v1beta1/zz_generated.deepcopy.go
-    - ".*_test.go"
-    - cpuset/*
-    - vendor/*
 linters:
   # disable all linters by default
   disable-all: true
