--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,10 @@ testbin/
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-cover.profile
-report.json
-report.xml
+cover.profile*
+report*.json
+report*.xml
+ginkgo.report
 
 # Kubernetes Generated files - skip generated files, except for vendored files
 
