--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -448,9 +448,9 @@ spec:
                 type: object
               reporting:
                 description: Reporting provides additional reporting options in order
-                  to send a message to a custom slack channel it expect the main controller
-                  to have slack notifier enabled it expect slack bot to be added to
-                  the defined slack channel
+                  to send a message to a custom slack channel it expects the main
+                  controller to have the slack notifier enabled it expects a slack
+                  bot to be added to the defined slack channel
                 nullable: true
                 properties:
                   minNotificationType:
@@ -486,6 +486,55 @@ spec:
                 type: object
               staticTargeting:
                 type: boolean
+              triggers:
+                description: DisruptionTriggers holds the options for changing when
+                  injector pods are created, and the timing of when the injection
+                  occurs
+                nullable: true
+                properties:
+                  createPods:
+                    properties:
+                      notBefore:
+                        description: 'inject.notBefore: Normal reconciliation and
+                          chaos pod creation will occur, but chaos pods will wait
+                          to inject until NotInjectedBefore. Must be after NoPodsBefore
+                          if both are specified createPods.notBefore: Will skip reconciliation
+                          until this time, no chaos pods will be created until after
+                          NoPodsBefore'
+                        format: date-time
+                        nullable: true
+                        type: string
+                      offset:
+                        description: 'inject.offset: Identical to NotBefore, but specified
+                          as an offset from max(CreationTimestamp, NoPodsBefore) instead
+                          of as a metav1.Time pods.offset: Identical to NotBefore,
+                          but specified as an offset from CreationTimestamp instead
+                          of as a metav1.Time'
+                        nullable: true
+                        type: string
+                    type: object
+                  inject:
+                    properties:
+                      notBefore:
+                        description: 'inject.notBefore: Normal reconciliation and
+                          chaos pod creation will occur, but chaos pods will wait
+                          to inject until NotInjectedBefore. Must be after NoPodsBefore
+                          if both are specified createPods.notBefore: Will skip reconciliation
+                          until this time, no chaos pods will be created until after
+                          NoPodsBefore'
+                        format: date-time
+                        nullable: true
+                        type: string
+                      offset:
+                        description: 'inject.offset: Identical to NotBefore, but specified
+                          as an offset from max(CreationTimestamp, NoPodsBefore) instead
+                          of as a metav1.Time pods.offset: Identical to NotBefore,
+                          but specified as an offset from CreationTimestamp instead
+                          of as a metav1.Time'
+                        nullable: true
+                        type: string
+                    type: object
+                type: object
               unsafeMode:
                 description: UnsafemodeSpec represents a spec with parameters to turn
                   off specific safety nets designed to catch common traps or issues
