feat(helm): reusable chart

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
       serviceAccount: chaos-controller
       containers:
       - name: kube-rbac-proxy
-        image: {{ .Values.images.proxy }}
+        image: {{ template "chaos-controller.format-image" .Values.proxy.image }}
         imagePullPolicy: IfNotPresent
         args:
         - --secure-listen-address=0.0.0.0:8443
@@ -34,7 +34,7 @@ spec:
         - containerPort: 8443
           name: https
       - name: manager
-        image: {{ .Values.images.controller }}
+        image: {{ template "chaos-controller.format-image" deepCopy .Values.global.chaos.defaultImage | merge .Values.global.oci | merge .Values.controller.image }}
         imagePullPolicy: IfNotPresent
         command:
         - /usr/local/bin/manager
@@ -46,7 +46,7 @@ spec:
               fieldRef:
                 fieldPath: spec.nodeName
         ports:
-        - containerPort: 9443
+        - containerPort: {{ .Values.controller.webhook.port }}
           name: webhook-server
           protocol: TCP
         resources:
@@ -63,9 +63,9 @@ spec:
         - mountPath: /etc/chaos-controller
           name: config
           readOnly: true
-      {{- if .Values.images.pullSecrets }}
+      {{- if .Values.controller.image.pullSecrets }}
       imagePullSecrets:
-        - name: {{ .Values.images.pullSecrets }}
+        - name: {{ .Values.controller.image.pullSecrets }}
       {{- end }}
       terminationGracePeriodSeconds: 10
       volumes:
@@ -75,5 +75,5 @@ spec:
           secretName: chaos-controller-webhook-secret
       - name: config
         configMap:
-          name: chaos-controller-config
+          name: chaos-controller
 {{- end }}
