--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,7 +110,7 @@ jobs:
       - checkout
       - run:
           name: Install binaries
-          command: make -j5 install-lint-deps install-kubebuilder install-helm install-controller-gen install-datadog-ci
+          command: make -j6 install-golangci-lint install-kubebuilder install-helm install-controller-gen install-datadog-ci install-yamlfmt
       - run:
           name: Install protoc
           command: make install-protobuf PROTOC_OS=linux
@@ -199,7 +199,7 @@ jobs:
           name: Run e2e tests
           command: |
             export PATH="/home/circleci/go/bin:${PATH}"
-            make e2e-test KUBECTL="minikube kubectl --" CLUSTER_NAME="minikube"
+            make e2e-test GOBIN=/home/circleci/go/bin KUBECTL="minikube kubectl --" CLUSTER_NAME="minikube"
           no_output_timeout: 15m
       - store_test_results:
           path: report.xml
