--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,9 +90,13 @@ build:make:
 
 release-staging-ref:
   <<: *release-staging
-  when: manual
-  except:
-    - tags
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: never
+    - if: $CI_COMMIT_BRANCH =~ /^.*-staging$/
+      when: on_success
+    - when: manual
+      allow_failure: true
   variables:
     TARGET_LABEL: "staging"
     TAG: "${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}"
@@ -177,3 +181,24 @@ slack-notifier-build.on-failure:
   only:
     - main
     - tags
+
+.slack-notifier-release-staging:
+  image: registry.ddbuild.io/slack-notifier:sdm
+  tags: [ "runner:main" ]
+  stage: notify
+  only:
+    - /^.*-staging$/
+  script:
+    - /usr/local/bin/notify.sh
+
+slack-notifier-release-staging.on-success:
+  extends: .slack-notifier-release-staging
+  when: on_success
+  variables:
+    MESSAGE: ':check: | Staging Image Build Complete | [ $CI_PROJECT_NAME ][ $CI_COMMIT_REF_NAME ][ $CI_COMMIT_SHA ]'
+
+slack-notifier-release-staging.on-failure:
+  extends: .slack-notifier-release-staging
+  when: on_failure
+  variables:
+    MESSAGE: ':siren: | Staging Image Build Failed | [ $CI_PROJECT_NAME ][ $CI_COMMIT_REF_NAME ][ $CI_COMMIT_SHA ] :siren:'
