fix: dumb typos

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -192,13 +192,13 @@ slack-notifier-build.on-failure:
     - /usr/local/bin/notify.sh
 
 slack-notifier-release-staging.on-success:
-  <<: .slack-notifier-release-staging
+  <<: *.slack-notifier-release-staging
   when: on_success
   variables:
     MESSAGE: ':check: | Staging Image Build Complete | [ $CI_PROJECT_NAME ][ $CI_COMMIT_REF_NAME ][ $CI_COMMIT_SHA ]'
 
 slack-notifier-release-staging.on-failure:
-  extends: .slack-notifier-release-staging
+  <<: *.slack-notifier-release-staging
   when: on_failure
   variables:
     MESSAGE: ':siren: | Staging Image Build Failed | [ $CI_PROJECT_NAME ][ $CI_COMMIT_REF_NAME ][ $CI_COMMIT_SHA ] :siren:'
